syntax = "proto3";

message Comic {
  int32 id = 1;
  string title = 2;
  int32 current_chap = 3;
  int32 viewed_chap = 4;
}

message Comics {
  repeated Comic comics = 1;
}